# datacontw2022

./: README.md
medallion-air/: Makefile  pyproject.toml  setup.cfg  setup.py
medallion-air/medallion_air/: __init__.py  repository.py
medallion-air/medallion_air/assets/bronze/: air_quality.py
medallion-air/medallion_air/jobs/: air_quality.py
medallion-air/medallion_air/resources/: __init__.py
medallion-air/medallion_air/schedules/: air_quality.py
medallion-weather/: Makefile  pyproject.toml  setup.cfg  setup.py
medallion-weather/medallion_weather/: __init__.py  repository.py
medallion-weather/medallion_weather/jobs/: __init__.py
