[tool.poetry]
name = "medallion_air"
description = "This project demonstrates implementation of Medallion Architecture proposed by Databricks using Dagster."
version = "0.1.0"
authors = ["George T. C. Lai <tsungchih.hd@gmail.com>"]
packages = [
    { include = "medallion_air" },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.10"
requests = "^2.28.0"
python-dotenv = "^0.21.0"
google-cloud-storage = "^2.3.0"
modin = {extras = ["all"], version = "0.17.0"}
orjson = "3.8.0"
pandas = "^1.4.0"
pyarrow = "^8.0.0"
dagster = "1.1.2"
dagster-graphql = "1.1.2"
dagster-postgres = "0.17.2"
dagster-k8s = "0.17.2"
dagster-gcp = "0.17.2"
dagster-pandera = "0.17.2"
dagster-pandas = "0.17.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pylama = "^8.4.1"
coverage = "^6.4.1"
dagit = "1.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
